--- a/index.html
+++ b/index.html
@@ -4,9 +4,77 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rock Paper Scissors</title>
+    <style>
+        *{
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+        }
+        #container{
+            width: 100%;
+            height: 100vh;
+            overflow: hidden;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            flex-direction: column;
+            gap: 20px;
+        }
+
+        #container >:nth-child(2){
+            /* margin-bottom: 20px; */
+            font-size: 24px;
+            font-weight: 500;
+        }
+
+        .btns{
+            display: flex;
+            gap: 10px;
+        }
+
+        button{
+            padding: 10px 20px;
+        }
+
+        .scores{
+            display: flex;
+            align-items: center;
+            gap: 5px;
+            font-size: 18px;
+            font-weight: 500;
+        }
+
+        .round-winner, .game-winner{
+            font-size: 18px;
+            font-weight: 500;
+        }
+
+        .round-winner, #play-again, .game-winner{
+            display: none;
+        }
+
+    </style>
 </head>
 <body>
-    
+    <div id="container">
+        <div class="scores">
+            <p>Player <span class="score p">0</span></p> -
+            <p><span class="score c">0</span> Computer</p>
+        </div>
+        <div>Rock!! Paper!! Scissors!!</div>
+        <div class="round-winner">
+            You win! Rock beats Scissors
+        </div>
+        <button id="play-again">Play again</button>
+        <div class="btns">
+            <button id="rock">Rock</button>
+            <button id="paper">Paper</button>
+            <button id="scissors">Scissors</button>
+        </div>
+        <div class="game-winner">
+            You Win! Congratulations! ***
+        </div>
+    </div>
     <script src="index.js"></script>
 </body>
 </html>
